[package]
name = "uc8253"
version = "0.1.0"
edition = "2024"

[dependencies]
embedded-graphics = "0.8.2"
embedded-hal = "1"
embedded-hal-async = { version = "1", optional = true }
defmt = { version = "1.1.0", optional = true }
log = { version = "0.4.32", optional = true }


[features]
default = ["async"]
heap_buffer = []
async = ["embedded-hal-async"]
defmt = ["dep:defmt"]
log = ["dep:log"]
